Plugin Name: Custom Sidebars Pro
Author: Javier Marquez (Incsub), Philipp Stracker (Incsub), Marcin Pietrzak (Incsub)
Buildtime: BUILDTIME

Change Log:
----------------------------------------------------------------------

3.0.4 ( 2017-04-xx )
- Fixed fetching posts.
- Fixed a problem on the Customizer page - removed clone option.

3.0.3 ( 2017-03-22 )
- Removed WP Checkup banner.

3.0.2 ( 2017-03-21 )
- Fixed compatibility issue with uBlock Origin and AdBlock Plus.
- Fixed getting started box not appearing.

3.0.1.0 ( 2017-03-20 )
- Added the "Create custom sidebar to get started." box.
- Fixed a problem with link to disable accessibility mode.
- Fixed UX problem with "plus" icon on visibility options.
- Show advertising for "WP Checkup" in whole admin area (only free version).

3.0.0.1 ( 2017-03-08 )
- Fixed a problem with wp_enqueue_script wich was called too early.
- Fixed a problem with advertising, which should stay close when you close it.

3.0.0 ( 2017-03-06 )
- Fixed a conflicting with other plugins.
- Improved functionality, free and pro versions have now the same functionality. The only difference is that the free version includes advertising (only WordPress admin area).

2.1.2.0 ( 2017-02-06 )
- Fixed a problem with empty selectors.
- Remove unnecessary HTTP header - it is only needed when we run cs-explains.
- Update Dash notice.

2.1.1.9 ( 2016-12-29 )
- Fixed export problem, when two or more widget has the same name.
- Fixed problem with import widgets created before Custom Sidebars plugin was installed.
- Fixed problem with sidebars on Front Page.

2.1.1.8 ( 2016-12-27 )
- Added support and widgets links on the plugins page.
- Fixed few "Undefined index" warnings.
- Improved import preview screen.
- Improved RTL languages on widgets screen.

2.1.1.7 ( 2016-11-23 )
- Rollback last change with front page.

2.1.1.6 ( 2016-11-21 )
- Fixed a bug when we try to use to get property of non-object in "maybe_display_widget()".